Refatoração: ListAthleteResponsibleController (Swagger)
